[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "chartify_helpers"
version = "1.2.2"
authors = [
  { name="Kristof Pusztai", email="kpusztai@berkeley.edu" },
]
description = "Some lightweight helper functions which add readability/functionality to Spotify's chartify library"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/KristofPusztai/chartify-helpers"